vvv CESKA VERZE JE UPLNE DOLE vvv

[B]1.7:[/B]
- fixed module loading addon dependencies

[B]1.6:[/B]
- make addon python 3.x compatible

[B]1.5:[/B]
- fix schedule dates error

[B]1.4:[/B]
- cookie correction if the user enters incorrectly, including a new line

[B]1.3:[/B]
- Plugin rewrite (misanov)
- Live
- Search
New location of cookie:
- save value of 'st' cookie to file named cookie
- ftp upload this file to Enigma box to /usr/lib/enigma2/python/Plugins/Extensions/archivCZSK/resources/data/plugin.video.eurosport/cookie
- if directory /usr/lib/enigma2/python/Plugins/Extensions/archivCZSK/resources/data/plugin.video.eurosport does not exit, create it
- you do not need to stop/start Enigma2

[B]1.2:[/B]
Add live tv and olympics archiv to top menu (misanov)

[B]1.1:[/B]
Add default audio to show more streams (misanov)

[B]1.0:[/B]
Initial version (misanov)

For fully working plugin you need to obtain the "st" cookie value from your browser.

Open Google Chrome browser:
- Log into www.eurosportplayer.com and start play any video
- Press F12 to access developer tools
- Select Application tab
- On the left hand side of the popup select Cookies in the Storage section
- Locate the 'st' cookie Name under https://www.eurosportplayer.com and copy it's Value
- Close browser without Logout! If you logout, the cookie expires! Better to use annonymous browser window

Open Enigma box (log into box by telnet):
- Stop Enigma2 (by running command: init 4)
- Open /etc/enigma2/settings file by any editor (vi)
- Insert copied value at new line started with config.plugins.archivCZSK.archives.plugin_video_eurosport.eurosporttoken=
- Save settings file and close editor
- Start Enigma2 (by running command: init 3)

=============
CESKA VERZE:
=============

Pro spravnou funkci doplnku je treba ziskat 'st' cookie z prohlizece.

- Otevrete prohlizec Google Chrome
- Prihlaste se na strance www.eurosportplayer.com a spustte jakekoliv video
- Stisknete klavesu F12