@@ -1,17 +1,13 @@
-<?xml version='1.0' encoding='utf-8'?>
-<addon id="plugin.video.eurosport" name="Eurosport Player" provider-name="Michal Novotny" version="1.7">
-  <requires>
-    <import addon="xbmc.python" version="2.1.0" />
-    <import addon="script.module.stream.resolver" version="1.6.22" />
-  </requires>
-  <extension library="default.py" point="xbmc.python.pluginsource" provides="video">
-    <provides>video</provides>
-  </extension>
-  <extension point="xbmc.addon.metadata">
-    <platform>all</platform>
-    <summary>Eurosport Player plugin</summary>
-    <description>Plugin to play videos from eurosportplayer.com</description>
-    <description lang="cs">Plugin pro přehrávání videí z eurosportplayer.com</description>
-    <description lang="sk">Plugin pre prehrávanie videí z eurosportplayer.com</description>
-  </extension>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<addon id="plugin.video.eurosport" name="Eurosport Player" provider-name="Michal Novotny" version="1.8">
+	<requires>
+		<import addon="enigma2.archivczsk" version="1.7.0"/>
+		<import addon="tools.xbmc" version="1.0" />
+	</requires>
+	<extension point="archivczsk.addon.video"/>
+	<extension point="archivczsk.addon.metadata">
+		<description>Plugin to play videos from eurosportplayer.com</description>
+		<description lang="cs">Plugin pro přehrávání videí z eurosportplayer.com</description>
+		<description lang="sk">Plugin pre prehrávanie videí z eurosportplayer.com</description>
+	</extension>
 </addon>
